--- a/_posts/2018-04-22-test.md
+++ b/_posts/2018-04-22-test.md
@@ -30,3 +30,4 @@ tags: 测试 test
 | ~~dafsd~~    | <u>safda</u> | _asdf_  | ~~fsdafd~~     |
 | --asdfasfd-- | <u>asdf</u>  | asdf    | -- asdfafsd -- |
 
+![](D:\Pictures\趣图\耳机接线.jpg)
