--- a/_posts/2018-04-23-test2.md
+++ b/_posts/2018-04-23-test2.md
@@ -5,8 +5,8 @@ data: 2018-04-23
 categories: Test
 tags: 测试 test
 ---
-
-[TOC]
+* content
+{:toc}
 
 ## 测试测试 - 第二个测试
 
@@ -19,3 +19,5 @@ tags: 测试 test
 搭建这个blog总共花费时间一天左右，主要是我啥都不会~
 
 还没有学会插入图片，待学习。
+
+![](https://raw.githubusercontent.com/stogqy/stogqy.github.io/master/_posts/Pics/20180423/DSC01084.JPG)
