--- a/_posts/2019-03-08-VPS_SSR.md
+++ b/_posts/2019-03-08-VPS_SSR.md
@@ -23,11 +23,11 @@ tags: VPN,SSR,Tips
 
 因为我只是用来做SSR，因此购买最低配的就可以了，首先用支付宝打钱到自己的账户，只需要金额大于等于你所需即可：
 
-![屏幕快照 2019-03-08 下午3.01.28](/Users/xwl-hmac/Desktop/1.png)
+![img1](https://raw.githubusercontent.com/stogqy/stogqy.github.io/master/_posts/Pics/20190308/1.png)
 
 然后设置好`Hostname`，再`Deploy Server`即可：
 
-![屏幕快照 2019-03-08 下午3.00.18](/Users/xwl-hmac/Desktop/2.png)
+![img2](https://raw.githubusercontent.com/stogqy/stogqy.github.io/master/_posts/Pics/20190308/2.png)
 
 机器配置好之后，你会得到一个IP，可以通过这个IP管理远程服务器：`ssh root@YourIP -p 22`，如果可以访问的话就OK，如果不能的话，就只能把它destroy再重新购买了，我当初试了10来次才找到一个没被ban的IP。
 
@@ -41,21 +41,21 @@ wget -N --no-check-certificate https://raw.githubusercontent.com/CecilWu/SSR-Chi
 
 一切正常的话你会看到：
 
-![屏幕快照 2019-03-08 下午4.33.45](/Users/xwl-hmac/Desktop/3.png)
+![img3](https://raw.githubusercontent.com/stogqy/stogqy.github.io/master/_posts/Pics/20190308/3.png)
 
 这里就是SSR的设置，首次安装的话按`1`进入安装步骤：
 
-![屏幕快照 2019-03-08 下午4.35.04](/Users/xwl-hmac/4.png)
+![img4](https://raw.githubusercontent.com/stogqy/stogqy.github.io/master/_posts/Pics/20181110/4.png)
 
 首先是端口设置，按照提示设置即可，比如我们最喜欢的`1024`端口，密码自己设，加密方式我选择的是aes-256-cfb。
 
-![屏幕快照 2019-03-08 下午4.37.38](/Users/xwl-hmac/Desktop/5.png)
+![img5](https://raw.githubusercontent.com/stogqy/stogqy.github.io/master/_posts/Pics/20190308/5.png)
 
 按照这个作者提示的做就行。
 
 因为我是自己用，所以后面几部我全部用的默认无限，然后到了这里就设置好了：
 
-![屏幕快照 2019-03-08 下午4.39.12](/Users/xwl-hmac/Desktop/6.png)
+![img6](https://raw.githubusercontent.com/stogqy/stogqy.github.io/master/_posts/Pics/20190308/6.png)
 
 把IP地址、端口号、加密方式记下来，填写到SSR客户端即可享受没有墙的世界了。
 
