post MySQL, update tags
make a new post, make all tags in Capitalized

--- a/_posts/2021-07-22-Mash.md
+++ b/_posts/2021-07-22-Mash.md
@@ -3,7 +3,7 @@ layout: post
 title: "Mash: 使用MinHash快速估算基因距离"
 data:  2021-07-22
 categories: Biotech
-tags: Biology, Bioinfo, Mash, MinMash, ANI
+tags: Biology Bioinfo Mash MinMash ANI
 ---
 
 * content
